k8s/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bram-vortex-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
#          # 1. Frontend Root Path (/)                   Uncomment when you are ready to deploy, Done for Dev Purposes
#          # Το Frontend παίρνει το βασικό route για να φορτώνει το UI
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bram-vortex-frontend-svc
                port:
                  number: 80

          # 2. Auth Service Routes
          # Χρειαζόμαστε το Auth Service προσβάσιμο για το Login flow
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bram-vortex-auth-svc
                port:
                  number: 80
